lab1/Test/L1-A-3-21.output
Error Type A at Line 7
Error Type B at Line 9
Error Type A at Line 12
Error Type A at Line 24
Error Type B at Line 34
Error Type B at Line 37
